--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <h1>Contador</h1>
+    <h1>Contadores</h1>
     <button onclick="adicionar()"></button>
     <script>
       var numero = 0;
